--- a/server/src/views/auth/login.hbs
+++ b/server/src/views/auth/login.hbs
@@ -5,10 +5,10 @@
                 <div class="card-body">
                     <img src="/favicon.png" alt="Logo" class="card-img-top mx-auto m-2 w-50">
                     <h2 class="card-title">ITESM</h2>
-                    <h2 class="card-title">Iniciar Sesion</h2>
+                    <h2 class="card-title">Login</h2>
                     <br>
 
-                    <form action="/signin" method="POST">
+                    <form action="/login" method="POST">
                         <div class="form-group text-left">
                             <label>Usuario</label>
                             <input type="text" name="username" placeholder="Usuario" class="form-control" autofocus required>
@@ -22,6 +22,7 @@
                                 Enviar
                             </button>
                         </div>
+                        <a href="/signin">Crear una cuenta</a>
                     </form>
                 </div>
             </div>
